@@ -1,3 +1,9 @@
+2011-07-06  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	* gdb.base/jit-so.exp: New test.
+	* gdb.base/jit-dlmain.c: New file.
+	* gdb.base/jit-main.c: Allow "main" to be elsewhere.
+
 2011-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.cp/temargs.exp (set sixth breakpoint for temargs): Move the test
